# tenancy-api

./: .gitignore  CLAUDE.md  Dockerfile  README.md  STATUS.md  app.py  bbox.py  db.py  graph.py  mcp_server.py  nixpacks.toml  pyproject.toml  qa.py  requirements.txt  schemas.py  textract.py
.github/workflows/: keep-warm.yml
docs/: demo-mcp.md
