[project]
name = "tenancy-api"
version = "0.1.0"
description = "Lease abstraction agent + MCP server"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "langgraph>=0.2",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
