[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "bbox", "db", "graph", "mcp_server", "qa", "schemas"]

[project]
name = "tenancy-api"
version = "0.1.0"
description = "Lease abstraction agent + MCP server"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "langgraph>=0.2",
    "mcp>=1.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "anthropic>=0.40",
    "pypdf>=4.0",
    "pypdfium2>=4.0",
    "pdfplumber>=0.11",
    "rapidfuzz>=3.9",
    "ocrmypdf>=16.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
